[package]
name = "texture_pass"
version = "0.1.0"
authors = ["Galizzi Guillermo <galizzi.guillermo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
image = "0.23.12"